# create-users-from-org

./: Cargo.toml  README.md
.github/workflows/: load_users.yml  tests.yml
src/: config.rs  main.rs  model.rs
