[package]
name = "create-users-from-org"
version = "0.1.0"
edition = "2021"

[dependencies]
envy = "0.4.2"
features = "0.10.0"
octocrab = "0.39.0"
reqwest = { version = "0.12.7", features = ["json"] }
rustfmt = "0.10.0"
serde = "1.0.210"
serde_derive = "1.0.210"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
